// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reverse Swap ePILTs against PILTS on Peregrine > PolkadotXcm assethub 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6200)",
            "refTime": "(rounded 290000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`Reverse Swap ePILTs against PILTS on Peregrine > assetHubs events xcm queue pallet 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;

exports[`Reverse Swap ePILTs against PILTS on Peregrine > peregrine asset swap pallet 1`] = `
[
  {
    "data": {
      "amount": "(rounded 50000000000000000)",
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "RemoteToLocalSwapExecuted",
    "section": "assetSwap",
  },
]
`;

exports[`Reverse Swap ePILTs against PILTS on Peregrine > peregrine balances pallet 1`] = `
[
  {
    "data": {
      "amount": "(rounded 50000000000000000)",
      "from": "4nv4phaKc4EcwENdRERuMF79ZSSB5xvnAk3zNySSbVbXhSwS",
      "to": "4seWojfEHrk5YKPahdErazQ3CWEHZYi6NV4gKz5AaejWbRPJ",
    },
    "method": "Transfer",
    "section": "balances",
  },
  {
    "data": {
      "amount": "(rounded 36000)",
      "from": "4nv4phaKc4EcwENdRERuMF79ZSSB5xvnAk3zNySSbVbXhSwS",
      "to": "4qPZ8fv6BjGoGKzfx5LtBFnEUp2b5Q5C1ErrjBNGmoFTLNHG",
    },
    "method": "Transfer",
    "section": "balances",
  },
]
`;

exports[`Reverse Swap ePILTs against PILTS on Peregrine > peregrine message queue 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 1000000000,
      },
    },
    "method": "Success",
    "section": "xcmpQueue",
  },
]
`;

exports[`Reverse Swap ePILTs against PILTS on Peregrine > sender events foreignAssets 1`] = `
[
  {
    "data": {
      "amount": 50000000000000000,
      "assetId": {
        "interior": {
          "X2": [
            {
              "GlobalConsensus": {
                "Ethereum": {
                  "chainId": "(rounded 11000000)",
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                "network": null,
              },
            },
          ],
        },
        "parents": 2,
      },
      "from": "5Go9qhpqq2EzAZ1SKkkx6bTjnSoTnHEB8FHCnieNS57TimEF",
      "to": "5Eg2fnshxV9kofpcNEFE7azHLAjcCtpNkbsH3kkWZasYUVKs",
    },
    "method": "Transferred",
    "section": "foreignAssets",
  },
]
`;
